--- a/my_files.html
+++ b/my_files.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Siddaganga Institute Of Technology,Tumkur</h1>
-    <h2>My Life My Rules</h2>
+    <h2>My Life My Rules!!!</h2>
 </body>
 </html>
